<resources>
    <string name="app_name">FloatingBubbleExampleApp</string>
    <string name="content_description_digiteq_logo">Digiteq logo</string>
    <string name="content_description_launch_bubble_button">Launch bubble button</string>
    <string name="launch_bubble_button_text">Open bubble</string>
    <string name="positive_action">Allow</string>
    <string name="negative_action">Decline</string>
    <string name="permission_dialog_message">This app needs permission to draw over other app. Please allow this permission.</string>
    <string name="permission_dialog_title">Permission</string>
</resources>